# fastapi-auth-system

./: .gitignore  README.md  app.py  main.py  pyproject.toml  routes.py
common/: app_factory.py  config.py  db_access.py  logger_config.py
db/: access.py  base_users_querys.py  common.py  engine.py  exceptions.py  models.py  querys.py  schemas.py  todo_querys.py  user_querys.py
models/: models.py  services.py  user.py  validators.py
routes/: health.py  login.py  todo.py  users.py
scripts/: reset_db.py
tests/: conftest.py  test_auth.py  test_todos.py  testing_db.py
todos/: exceptions.py
users/: dependencies.py  exceptions.py  helper.py  services.py
