[project]
name = "fastapi-auth-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"] 
extend-select = ["B"] 

[tool.ruff.format]
quote-style = "double"
